[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-actor"
version = "0.1.0"
description = "Generalized MQTT Actor Shim for PhotogrammetryWAAM"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "PhotogrammetryWAAM Team" },
]
dependencies = [
  "paho-mqtt>=1.6.0",
  "pydantic>=2.0.0",
]
keywords = ["mqtt", "actor", "pydantic", "photogrammetry", "waam"]

[project.scripts]
mqtt-actor-example = "py_mqtt_actor:main"

[tool.setuptools]
py-modules = ["py_mqtt_actor"]
