[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "py_mqtt_actor"
version = "0.1.0"
description = "Python actor paradigm implementation using MQTT and Pydantic"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Nathan Argetsinger" },
]
dependencies = [
  "paho-mqtt>=1.6.0",
  "pydantic>=2.0.0",
]
keywords = ["mqtt", "actor", "pydantic", "asynchronous", "concurrency"]

[project.scripts]
mqtt-actor-example = "py_mqtt_actor:main"

[tool.setuptools]
py-modules = ["py_mqtt_actor"]

[tool.uv.workspace]
members = [
    "example",
    "example/00__another_example",
]
